# cmake-arm64-prism-rosetta

./: CMakeLists.txt  README.md  has_avx.cpp  is_prism.cpp  is_prism.m  is_prism.py  is_rosetta.c  is_rosetta.cpp  is_rosetta.py  pyproject.toml
.github/workflows/: ci.yml
